# redis-enterprise-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  HARMONIZATION-PLAN.md  LICENSE-MIT  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  python.yml  release-plz.yml
examples/: basic_enterprise.rs  cluster_setup_simple.rs
python/: Cargo.toml  README.md  pyproject.toml
python/redis_enterprise/: __init__.py
python/src/: client.rs  error.rs  lib.rs  runtime.rs
scripts/: sync_python_package_version.py
src/: actions.rs  alerts.rs  bdb.rs  bdb_groups.rs  bootstrap.rs  client.rs  cluster.rs  cm_settings.rs  crdb.rs  crdb_tasks.rs  debuginfo.rs  diagnostics.rs  endpoints.rs  error.rs  job_scheduler.rs  jsonschema.rs  ldap_mappings.rs  lib.rs  lib_tests.rs  license.rs  local.rs  logs.rs  macros.rs  migrations.rs  modules.rs  nodes.rs  ocsp.rs  proxies.rs  redis_acls.rs  roles.rs  services.rs  shards.rs  stats.rs  suffixes.rs  types.rs  usage_report.rs  users.rs
src/testing/: fixtures.rs  mod.rs  responses.rs  server.rs
tests/: action_tests.rs  alerts_tests.rs  bdb.rs  bdb_groups_tests.rs  bootstrap_tests.rs  cluster_info_test.rs  cluster_tests.rs  cm_settings_tests.rs  crdb_tasks_tests.rs  crdb_tests.rs  database_tests.rs  debuginfo_tests.rs  diagnostics_tests.rs  endpoints_tests.rs  fixture_validation_tests.rs  job_scheduler_tests.rs  jsonschema_tests.rs  ldap_mappings_tests.rs  license_tests.rs  local_tests.rs  logs_tests.rs  migrations_tests.rs  module_tests.rs  node_tests.rs  ocsp_tests.rs  proxy_tests.rs  redis_acl_tests.rs  roles_tests.rs  serde_path_error_test.rs  services_tests.rs  shard_tests.rs  stats_tests.rs  suffixes_tests.rs  tower_integration_tests.rs  tower_middleware_tests.rs  usage_report_tests.rs  user_tests.rs
tests/bdb/: actions.rs  common.rs  crud.rs  monitoring.rs
tests/common/: fixtures.rs  mod.rs
tests/fixtures/: actions_list.json  bdb_groups_list.json  bdb_single.json  bdbs_list.json  bdbs_stats.json  bootstrap_status.json  cluster.json  cluster_alerts.json  cluster_stats.json  crdbs_list.json  license.json  modules_list.json  node_single.json  nodes.json  nodes_list.json  nodes_stats.json  ocsp.json  proxies_list.json  shards_list.json  user_single.json  users_list.json
