[package]
name = "redis-enterprise-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python bindings for Redis Enterprise API client"
repository = "https://github.com/redis-developer/redis-enterprise-rs"
homepage = "https://github.com/redis-developer/redis-enterprise-rs"
publish = false

[lib]
name = "redis_enterprise"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
redis-enterprise = { path = ".." }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[build-dependencies]
pyo3-build-config = "0.23"
