[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "redis-enterprise"
version = "0.1.0"
description = "Python bindings for Redis Enterprise REST API client"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Josh Rotenberg", email = "joshrotenberg@gmail.com" }
]
keywords = ["redis", "enterprise", "api", "rest", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Typing :: Typed",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/redis-developer/redis-enterprise-rs"
Repository = "https://github.com/redis-developer/redis-enterprise-rs"
Documentation = "https://docs.rs/redis-enterprise"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "redis_enterprise"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
